// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavbarButton /> renders correctly 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "opacity": 1,
      "paddingBottom": 8,
      "paddingLeft": 8,
      "paddingRight": 8,
      "paddingTop": 8,
    }
  }
>
  Icon
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Poppins_500Medium",
        },
        Object {
          "color": "rgba(139, 92, 246, 1)",
          "fontSize": 12,
          "lineHeight": 16,
        },
      ]
    }
  >
    Confirm
  </Text>
</View>
`;

exports[`<NavbarButton /> renders correctly when inactive 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "opacity": 1,
      "paddingBottom": 8,
      "paddingLeft": 8,
      "paddingRight": 8,
      "paddingTop": 8,
    }
  }
>
  Icon
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Poppins_500Medium",
        },
        Object {
          "color": "rgba(156, 163, 175, 1)",
          "fontSize": 12,
          "lineHeight": 16,
        },
      ]
    }
  >
    Confirm
  </Text>
</View>
`;
